# ParallelComputing

CudaProject/: .cproject  .project
CudaProject/Debug/: CudaProject  makefile
CudaProject/Debug/src/: subdir.mk
CudaProject/input/: inputTextLong.txt
CudaProject/src/: CMakeLists.txt  main.cu
JavaProject/src/patternRecognition/: PatternRecognitionMain.java  PatternRecognitionResult.java
JavaProject/src/tools/: Pair.java
